--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Minisafeway</title>
+  <title>E-Quality</title>
   <base href="/">
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="_favicon.ico">
 </head>
 <body>
   <app-root></app-root>
